fix setpage actions on mobile not 100%

--- a/src/app-components/SetPage/_set-page.scss
+++ b/src/app-components/SetPage/_set-page.scss
@@ -239,14 +239,14 @@
       .actions {
         flex-wrap: wrap;
         a {
-          width: 47%;
+          width: 100%;
           margin: 3px;
           font-size: 0.8rem;
         }
 
         .addFolder {
           display: flex;
-          width: 47%;
+          width: 100%;
           margin: 3px;
         }
 
